// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tests for HomePage Should render component without user 1`] = `
<div>
  <h1>
    HomePage 
    <small />
  </h1>
  <hr />
</div>
`;

exports[`Tests for HomePage Should render component without user 2`] = `
<div>
  <h1>
    HomePage 
    <small>
      Roberto
    </small>
  </h1>
  <hr />
</div>
`;
